iniciado montaje del menú principal, problema de compatibilidad de imágen grave encontrado, he de redimensionar varios componentes
Signed-off-by: zhensk27 <ceschen27@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">TeamFightTacticsApp</string>
     <string name="image">image</string>
+    <string name="campeones">CAMPEÓNES</string>
+    <string name="items">ÍTEMS</string>
+    <string name="seleccionar">SELECCIONAR</string>
+    <string name="estadisticas">ESTADÍSTICAS</string>
 </resources>
